[tool.poetry]
name = "flask-excel-file-upload"
version = "0.1.0"
description = ""
authors = ["Lokanath M <Lokanath467@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"
fastapi = {extras = ["standard"], version = "^0.112.1"}
sqlalchemy = "^2.0.32"
black = "^24.8.0"
autoflake = "^2.3.1"
ruff = "^0.6.1"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
